Wed May 25 00:37:16 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_pkey_ec.c (ossl_ec_key_generate_key): Fix up RDoc.
	  (Init_ossl_ec): Rename EC#generate_key to EC#generate_key!. Make the
	  old name an alias of #generate_key!. This change is for consistency
	  with other PKey types.  [ruby-core:45541] [Bug #6567]

	* test/openssl/test_pkey_ec.rb: Use EC#generate_key! instead of
	  EC#generate_key.

Wed May 25 00:23:05 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (rb_scan_args_set): check the arity after
	  adjusting argc for an option hash, for optimization in simpler
	  cases.

Wed May 25 00:21:52 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (XCFLAGS): merge flags only for ruby itself from
	  ruby_cflags.

Tue May 24 22:04:15 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_cipher.c (ossl_cipher_set_key, ossl_cipher_set_iv):
	  Reject too long values as well as too short ones. Currently they
	  just truncate the input but this would hide bugs and lead to
	  unexpected encryption/decryption results.

	* test/openssl/test_cipher.rb: Test that Cipher#key= and #iv= reject
	  Strings with invalid length.

Tue May 24 21:32:21 2016  Kazuki Yamaguchi  <k@rhe.jp>

	* ext/openssl/ossl_x509ext.c (ossl_x509ext_set_value): Use
	  ASN1_OCTET_STRING_set() instead of M_ASN1_OCTET_STRING_set(). Macros
	  prefixed by "M_" are discouraged to be used from outside OpenSSL
	  library[1].
	  (ossl_x509ext_get_value): Likewise, use ASN1_STRING_print() instead
	  of M_ASN1_OCTET_STRING_print().
	  [1] https://git.openssl.org/gitweb/?p=openssl.git;a=blob;f=CHANGES;h=bf61913d7b01212b4d8b2f3c13d71d645914f67c;hb=b6079a7835f61daa9fb2cbf9addfa86049523933#l878

	* ext/openssl/ossl.h: Include openssl/asn1.h instead of
	  openssl/asn1_mac.h. It just includes openssl/asn1.h and defines some
	  additional "M_" macros.

Tue May 24 18:52:11 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>
